# tiny-write

./: .eslintignore  .eslintrc  .gitignore  .oxlintignore  .oxlintrc.json  .prettierrc.json  :q  README.md  abcdefghijklmnopqrstuvwxyz.md  biome.json  eslint.config.js  index.html  index.js  index.ts  jest-playwright.config.js  jest.config.js  jest.integration.config.js  package-lock.json  package.json  playwright.config.ts  preload.js  preload.ts  rollup.config.js  tsconfig.json  vite-env.d.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml  release.yml
public/: index.js
src/: ErrorBoundary.tsx  Main.tsx  WithEditorState.tsx  actions.ts  config.ts  ctrl.ts  data.ts  db.ts  env.ts  fs.ts  hooks.ts  index.tsx  markdown.ts  menu.ts  open.ts  prosemirror-setup.ts  prosemirror-util.ts  prosemirror.ts  reducer.ts  remote.ts  service.ts  shared.ts  state.ts  store.ts  styles.ts  tree.ts  types.ts  use-previous.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: editor_state.rs  install_cli.rs  lib.rs  logger.rs  lsp_registry.rs  lsp_service.rs  main.rs  menu.rs  pathutil.rs  testutil.rs
src-tauri/src/cmd/: args.rs  code.rs  editor.rs  file.rs  lsp.rs  mod.rs  path.rs
src-tauri/src/copilot/: chat_service.rs  command.rs  lsp_service.rs  mod.rs  request.rs  service.rs
src-tauri/src/editor/: command_args.rs  command_editor_state.rs  editor_state.rs  mod.rs  pathutil.rs  testutil.rs
src-tauri/src/fs/: list.rs  metadata.rs  mod.rs  path.rs
src-tauri/src/install_cli/: mod.rs
src-tauri/src/logger/: command.rs  mod.rs  setup.rs
src-tauri/src/lsp/: command.rs  mod.rs  registry.rs  server.rs  service.rs  util.rs
src-tauri/src/menu/: mod.rs
src/codemirror/: clip.ts  completion.ts  copilot.ts  fold-all.ts  highlight.ts  key-bindings.ts  logos.ts  lsp-completion.ts  lsp-hover.ts  mermaid.ts  prettify.ts  theme.ts
src/components/: AppearanceMenu.tsx  Back.tsx  BinMenu.tsx  Bounds.tsx  Button.tsx  Canvas.tsx  CanvasEditor.tsx  CanvasGrid.tsx  CanvasImage.tsx  CanvasLink.tsx  CanvasLinkEnd.tsx  CanvasPreview.tsx  CanvasVideo.tsx  CanvasesMenu.tsx  ChangeSetMenu.tsx  CodeBlockMenu.tsx  CodeEditor.tsx  Container.tsx  Cursors.tsx  DarkMode.tsx  Dir.tsx  Drawer.tsx  DropFile.tsx  Editor.tsx  Error.tsx  FilesMenu.tsx  Fonts.tsx  Help.tsx  HelpMenu.tsx  Icon.tsx  Icons.tsx  Image.tsx  Init.tsx  Keymap.tsx  LastModified.tsx  Layout.tsx  Link.tsx  Main.tsx  MarkdownEditor.tsx  Menu.tsx  (+19 more)
src/ctrl/: app.ts  change-set.ts  config.ts  editor.ts  index.ts  keymap.ts
src/effects/: Electron.ts  IpcRenderer.ts  LocalStorage.ts  Many.ts
src/hooks/: current-file.ts  current-page.ts  open.ts  sequential-effect.ts  use-before-leave.ts  use-collab-count.ts  use-confirm-dialog.tsx  use-current-file.ts  use-dialog.ts  use-input-line.tsx  use-open.ts  use-title.ts
src/prompts/: canvas-file.md  editor-text-handling.md  generate-title.md  refactor-code.md
src/prosemirror/: add-decoration.ts  base.ts  block-handle.ts  block-menu.ts  code.ts  collab.ts  container.ts  drag-handle.ts  editor.tsx  emphasis.ts  file.ts  hard-break.ts  heading.ts  horizontal-rule.ts  image.ts  index.ts  input-parser.ts  link.ts  list.ts  mark-input-rule.ts  markdown-shortcuts.ts  markdown.ts  on-enter-double-newline.ts  paragraph.ts  paste-markdown.ts  placeholder.ts  position.ts  prosemirror.tsx  rulebuilders.ts  schema.ts  scroll.ts  select.ts  selected.ts  setup.ts  tab.ts  (+2 more)
test/: basic.test.ts  code-block.test.ts  code.test.ts  db.test.ts  file.test.ts  index.test.ts  link.test.ts  reducer.test.ts  todo-list.test.ts  utils.ts
types/: index.d.ts
typings/: insert-css.d.ts
(+407 files in other folders)
