[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
license = ""
repository = ""
default-run = "app"
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
serde_json = "1"
serde = { version = "1", features = [ "derive" ] }
mime_guess = "2"
dirs = "5"
url = "2"
base64 = "0"
chrono = "0"
log = { version = "0", features = ["max_level_debug"] }
ignore = "0"
globset = "0"
anyhow = "1"
ropey = "1"
debounced = "0"
tokio = "1"
futures = "0"
futures-channel = "0"
crossbeam-channel = "0"
tauri-plugin-cli = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-clipboard-manager = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-log = "2.0.0-beta"
tauri-plugin-websocket = { version = "2.0.0-beta", features = ["native-tls"] }
tauri-plugin-shell = "2.0.0-beta"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
