[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
license = ""
repository = ""
default-run = "app"
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "test"] }
serde_json = "1"
serde = { version = "1", features = [ "derive" ] }
mime_guess = "2"
dirs = "5"
url = "2"
base64 = "0"
chrono = "0"
log = { version = "0", features = ["max_level_debug"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "registry"] }
tracing-appender = "0"
ignore = "0"
globset = "0"
anyhow = "1"
ropey = "1"
debounced = "0"
tokio = { version = "1", features = ["full"] }
async-channel = "2"
futures = "0"
futures-channel = "0"
crossbeam-channel = "0"
async-lsp = "0"
tower = "0"
async-process = "2"
reqwest = "0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-cli = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-websocket = { version = "2", features = ["native-tls"] }
tauri-plugin-shell = "2"

[dev-dependencies]
serial_test = "3"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
